fix: Gallery item blur reason more readable

--- a/MediaCloud/wwwroot/css/site.css
+++ b/MediaCloud/wwwroot/css/site.css
@@ -338,10 +338,10 @@ body {
     text-align: center;
     vertical-align: middle;
     line-height: 15rem;
-    color: lightgray;
+    color: white;
+    mix-blend-mode: overlay;
     font-family: cursive;
     bottom: -1px;
-    mix-blend-mode: difference;
 }
 
 .gallery-item-bubble {
